<resources>
    <string name="app_name">UdNi-SMS</string>
    <string name="user_profile">User Profile</string>
    <string name="signin">Sign In</string>
    <string name="name">Username</string>
    <string name="add">Add Site</string>
    <string name="title_home">Settings</string>
    <string name="title_dashboard">Control Panel</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_delete">Delete</string>
    <string name="title_delete_rec">Delete Records</string>
    <string name="title_sites">Sites</string>
    <string name="splash_text">GOPRAN</string>
    <string name="pwd">Password</string>
    <string name="Character_Count">Count</string>
    <string name="Splash">AUTO_HOME</string>
    <string name="discon">DISCONNECT AUTO_HOME</string>
    <string name="setRoom">CONFIGURE ROOMS</string>
    <string name="scanWifiAgain">SHOW NAME CHANGE</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="changeSelfNumber">CHANGE SELF NUMBERS</string>
    <string name="changeElevatorCompanyNumber">CHANGE ELEVATOR COMPANY NUMBERS</string>
    <string name="changePanelBuilderNumber">PANEL BUILDER</string>
    <string name="gopran">GOPRAN</string>
    <string name="builder">P. BLDR</string>
    <string name="company">CLIENTS</string>
    <string name="sites">SITES</string>
    <string name="self">SELF</string>
    <string name="dateDisplay">DATE</string>
    <string name="latest">The last data received is as follows</string>
    <string name="show">SHOW CLIENTS&#8230;</string>
    <string name="sms">SHOW RECEIVED SMS&#8230;</string>
    <string name="meaning">SHOW INFORMATION&#8230;</string>
    <string name="deleteDate">DELETE DATE RECORD&#8230;</string>
    <string name="deleteNumber">DELETE NUMBER RECORD&#8230;</string>
    <string name="deleteRecords">DELETE RECORDS&#8230;</string>
    <string name="showRecords">SHOW USER RECORD</string>
    <string name="deleteSMS">DELETE SMS</string>
    <string name="deleteClient">DELETE CLIENT</string>
    <string name="deleteUser">DELETE USER RECORDS</string>
    <string name="delete">DELETE TABLE</string>
    <string name="dash">----</string>
    <string name="status">STATUS RECEIVED ON:</string>
    <string name="centerAlignment">center</string>
    <string name="calls">C</string>
    <string name="nocalls">-</string>
    <string name="big_double">===============</string>
    <string name="table_title">TABLE TITLE</string>
    <string name="liftErroStatusTable">LIFT ERROR STATUS</string>
    <string name="empty">----</string>
    <string name="user_profile_heading">UdNi-SMS</string>
    <string name="user_profile_title">USER PROFILE</string>
    <string name="name_field">Name</string>
    <string name="company_field">Company</string>
    <string name="email_field">Email</string>
    <string name="phone_field_1">Mobile 1 (10 digits)</string>
    <string name="phone_field_2">Mobile 2 (10 digits)</string>
    <string name="whatsapp_no">WhatsApp No.</string>
    <string name="address1">Address</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">Address Line 3</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="cmd7">Main Card Input</string>
    <string name="cmd8">Main Card Terminal Input</string>
    <string name="cmd8_L">Terminal Input</string>
    <string name="cmd8_H">Terminal Input</string>
    <string name="cmd9">Main Card Output</string>
    <string name="cmd9_L">Main Card Output</string>
    <string name="cmd9_H">Main Card Output</string>
    <string name="cmd10">CBC Inputs</string>
    <string name="cmd10_L">CBC Inputs</string>
    <string name="cmd10_H">CBC Inputs</string>
    <string name="cmd11">CBC Outputs</string>
    <string name="cmd11_L">CBC Outputs</string>
    <string name="cmd11_H">CBC Outputs</string>
    <string name="cmd12">FLR Up Keys</string>
    <string name="cmd12_L">FLR Up Keys</string>
    <string name="cmd12_H">FLR Up Keys</string>
    <string name="cmd12_L_M">FLR Up Keys</string>
    <string name="cmd12_H_M">FLR Up Keys</string>
    <string name="cmd13">FLR Dn Keys</string>
    <string name="cmd13_L">FLR Dn Keys</string>
    <string name="cmd13_H">FLR Dn Keys</string>
    <string name="cmd13_L_M">FLR Dn Keys</string>
    <string name="cmd13_H_M">FLR Dn Keys</string>
    <string name="cmd14">Car Keys</string>
    <string name="cmd14_L">Car Keys</string>
    <string name="cmd14_H">Car Keys</string>
    <string name="cmd14_L_M">Car Keys</string>
    <string name="cmd14_H_M">Car Keys</string>
    <string name="cmd15">Lift Status</string>
    <string name="cmd16">Lift Error Status</string>
    <string name="cmd16_L">Lift Error Status</string>
    <string name="cmd16_H">Lift Error Status</string>
    <string name="cmd16_L_M">Lift Error Status</string>
    <string name="cmd16_H_M">Lift Error Status</string>
    <string name="cmd17">Lift EMR Stop</string>
    <string name="cmd18">Lift EMR Stop Release</string>
    <string name="cmd19">Start Monitoring</string>
    <string name="cmd20">Lift EMR Stop Status</string>
    <string name="deleteSite">Delete Site</string>
    <string name="company_name">GOPRAN INDUSTRIES</string>
    <string name="siteName">Name of the Site</string>
    <string name="siteNumber">Phone Number (Only 10 digits)</string>
    <string name="siteRegBtn">Register</string>
    <string name="refresh">Refresh</string>
    <string name="editInfo">Edit Site Related Information</string>
    <string name="addSite">Add Site Related Information</string>
    <string name="deleteSiteInfo">Delete Sites Page</string>
    <string name="command">Command</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="chooseSite">Choose Site</string>
    <string name="number1_2">Number #1 or #2?</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="digits">New Number (only 10 digits)</string>
    <string name="count">Cell Number digit count</string>
    <string name="res">Response</string>
    <string name="test">OK</string>
    <string name="contact">Help Center...</string>
    <string name="screen">Screen Info...</string>

</resources>
