<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context=".AddSiteActivity1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addSite"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <TableLayout
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_name_svg" />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/siteName"
                    android:hint="@string/siteName"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:inputType="text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_mobile_svg"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/siteNumber"
                    android:hint="@string/siteNumber"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:inputType="number"/>
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_address_svg"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:hint="@string/address1"
                    android:textColorHint="@color/Gray"
                    android:textColor="@color/primary"
                    android:id="@+id/siteAddress_1"
                    android:inputType="text"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_border_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>