<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".EditSiteInformationActivity"
    android:id="@+id/scrollView"
    android:background="@drawable/bg"
    android:scrollbars="vertical">
    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editInfo"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <TableLayout
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_name_svg" />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/editSiteName"
                    android:hint="@string/siteName"
                    android:textColorHint="@color/Gray"
                    android:backgroundTint="@color/white"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_mobile_svg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/editSiteNumber"
                    android:backgroundTint="@color/white"
                    android:hint="@string/siteNumber"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_address_svg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:hint="@string/address1"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/Gray"
                    android:textColor="@color/White"
                    android:id="@+id/editSiteAddress_1"
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    />
                <!--
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/Gray"
                    android:textColor="@color/White"
                    android:id="@+id/editSiteAddress_2"
                    android:backgroundTint="@color/white"
                    android:inputType="text"/>
                    -->
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/updateButton"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@drawable/edit_border"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>