<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="center">
    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="OK"
        />
    <TableLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:orientation="horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/nl_col_blg"
                android:text="@string/chooseSite"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <Spinner
                android:id="@+id/theReceivingNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:textStyle="bold"
                android:spinnerMode="dropdown"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/changedNumberLengthWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nl_col_blg"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/count"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/textNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:backgroundTint="@color/primary"
        android:hint="@string/digits"
        android:ems="10"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:inputType="number"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:spinnerMode="dropdown"/>
    <!--
    <TableLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:orientation="horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/choiceOfNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number1_2"
                android:textColor="@color/nl_col_blg"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown"/>
        </TableRow>
    </TableLayout>
    -->
    <Button
        android:layout_marginTop="55dp"
        android:id="@+id/changeButton"
        android:background="@drawable/edit_border_nl"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/change"/>
    <!--
    <TableLayout
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">
            <Button
                android:id="@+id/changeButton"
                android:background="@drawable/edit_border_nl"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="25dp"
                android:text="@string/change"/>
            <Button
                android:id="@+id/exitButton"
                android:background="@drawable/edit_border_nl"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="25dp"
                android:text="@string/exit"/>
        </TableRow>
    </TableLayout>
    -->

    <TextView
        android:id="@+id/responseText"
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/myriad_pro_it"
        android:layout_gravity="center"
        />
</LinearLayout>